# HackMIT-2020

./: .gitignore  README.md  package-lock.json
TTS_clone/: inference.py  voice_clone.ipynb
TTS_clone/deep_voice_cloning/: inference.py
TTS_clone/deep_voice_cloning/samples/: oprah.m4a
atomizecode.com/: app-8990ad54ba86f7f93fbf.js  commons-a99efccc1ebd4050c649.js  component---src-pages-index-js-42f9ebd1f211edbe3e7a.js  index.html  robots.txt  styles-9f650a5e177f3306efa7.js  webpack-runtime-d2356b182e67bf672e13.js
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/scripts/: gpt.py  speech2text.py  text2speech.py
frontend/: .firebaserc  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Demo.js  Directory.js  Header.js  Home.js  Person.js  Random.js  Routing.js  index.js
frontend_test/src/: App.js
